saving to Backend

--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -35,7 +35,10 @@
                             <option value="Isometric">Isometric</option>
                         </select>
                     </div>
-
+                    <div class="form-group">
+                        <label for="mapWidth">Enter Project Name:</label>
+                        <input type="text"class="form-control" id="projectName" aria-required="true" placeholder="Enter project name">
+                    </div>
                     <div class="form-group">
                         <label for="mapWidth">Map Width:</label>
                         <input type="number" step="1" min="1" max = "100" class="form-control" id="mapWidth" placeholder="Enter map width">
