working on retrieving data and displaying on html with thymeleaf.

--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -71,6 +71,10 @@
         </div>
     </div>
 </div>
+<div>
+    <p th:each = "p : ${project}" th:text = "${p.name}" </p>
+</div>
+
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
