--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -26,7 +26,7 @@
 
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-save icon" title="Save"></i>
+                    <i class="fas fa-save icon" title="Save" id="saveWork"></i>
                 </div>
             </div>
             <div class = "row iconrow">
@@ -358,7 +358,7 @@
 <script type="module" src="js/layerController.js"></script>
 <script src="js/fabricTilesetController.js"></script>
 <script type="module" src="js/fabricTileStamp.js"></script>
-
+<script src="js/saveProject.js"></script>
 
 <!--<script src="js/tileSelection.js"></script>-->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
