--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -13,66 +13,84 @@
 
 <div th:insert="fragments.html :: nav"></div>
 <!--Create New Poject Button-->
-<div class="card" style="width: 18rem; margin:auto; " data-toggle="modal" data-target="#exampleModalCenter">
-    <img src="../images/plus.svg" class="card-img-top addButton" alt="...">
-</div>
-<!--The popup model-->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-     aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Create A New Map!!</h5>
-            </div>
-            <div class="modal-body">
-                <!--                The Input Form-->
-                <!--/*@thymesVar id="project" type=""*/-->
-                <form action="#" th:action="@{/workspace}" th:object="${map}" method="POST">
-                    <div class="form-group form-inline">
-                        <label>Orientation:</label>
-                        <select id="orientation" style="padding-left: 10px">
-                            <option value="Orthogonal">Orthogonal</option>
-                            <option value="Isometric">Isometric</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="mapWidth">Enter Project Name:</label>
-                        <input type="text" class="form-control" id="projectName" aria-required="true"
-                               placeholder="Enter project name">
-                    </div>
-                    <div class="form-group">
-                        <label for="mapWidth">Map Width:</label>
-                        <input type="number" step="1" min="1" max="100" class="form-control" id="mapWidth"
-                               placeholder="Enter map width">
-                    </div>
-                    <div class="form-group">
-                        <label for="mapHeight">Map Height:</label>
-                        <input type="number" step="1" min="1" max="100" class="form-control" id="mapHeight"
-                               placeholder="Enter map height">
-                    </div>
-                    <div class="form-group">
-                        <label for="tileWidth">Tile Width:</label>
-                        <input type="number" step="1" min="1" max="100" class="form-control" id="tileWidth" value="32"
-                               placeholder="Enter tile width">
-                    </div>
-                    <div class="form-group">
-                        <label for="tileHeight">Tile Height:</label>
-                        <input type="number" step="1" min="1" max="100" class="form-control" id="tileHeight" value="32"
-                               placeholder="Enter tile height">
-                    </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" onclick="createMap()">Create Map</button>
-                    </div>
-                </form>
-
+<div class = "container m-2">
+    <div class="row" th:fragment="list" xmlns:th="http://www.thymeleaf.org">
+        <div class = "col-sm-3">
+            <div class="card mb-3" data-toggle="modal" data-target="#exampleModalCenter">
+                <img src="../images/plus.svg" class="card-img-top addButton" alt="...">
             </div>
         </div>
+        <!--The popup model-->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Create A New Map!!</h5>
+                    </div>
+                    <div class="modal-body">
+                        <!--                The Input Form-->
+                        <!--/*@thymesVar id="project" type=""*/-->
+                        <form action="#" th:action="@{/workspace}" th:object="${map}" method="POST">
+                            <div class="form-group form-inline">
+                                <label>Orientation:</label>
+                                <select id="orientation" style="padding-left: 10px">
+                                    <option value="Orthogonal">Orthogonal</option>
+                                    <option value="Isometric">Isometric</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="mapWidth">Enter Project Name:</label>
+                                <input type="text" class="form-control" id="projectName" aria-required="true"
+                                       placeholder="Enter project name">
+                            </div>
+                            <div class="form-group">
+                                <label for="mapWidth">Map Width:</label>
+                                <input type="number" step="1" min="1" max="100" class="form-control" id="mapWidth"
+                                       placeholder="Enter map width">
+                            </div>
+                            <div class="form-group">
+                                <label for="mapHeight">Map Height:</label>
+                                <input type="number" step="1" min="1" max="100" class="form-control" id="mapHeight"
+                                       placeholder="Enter map height">
+                            </div>
+                            <div class="form-group">
+                                <label for="tileWidth">Tile Width:</label>
+                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileWidth" value="32"
+                                       placeholder="Enter tile width">
+                            </div>
+                            <div class="form-group">
+                                <label for="tileHeight">Tile Height:</label>
+                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileHeight" value="32"
+                                       placeholder="Enter tile height">
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary" onclick="createMap()">Create Map</button>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!--<div>-->
+    <!--    <p th:each = "p : ${project}" th:text = "${p.name}" </p>-->
+    <!--</div>-->
+        <div class = "col-sm-3" th:each = "project, stat: ${projects}">
+            <a href="#toworkspacereload">
+                <div class="card mb-3">
+                    <img class="card-img-top" th:src="${project.screenshot}"/>
+                    <div class="card-footer">
+                        <h6 class="card-title" th:text="${project.name}"/>
+                        <small class="text-muted"  style="padding:unset;" th:text="'Last updated at '+ ${project.createdDate}"/>
+                    </div>
+                </div>
+            </a>
+
+        </div>
     </div>
-</div>
-<div>
-    <p th:each = "p : ${project}" th:text = "${p.name}" </p>
 </div>
 
 
