Able to save project and fix some input bugs

--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -42,27 +42,27 @@
                             <div class="form-group">
                                 <label for="mapWidth">Enter Project Name:</label>
                                 <input type="text" class="form-control" id="projectName" aria-required="true"
-                                       placeholder="Enter project name">
+                                       placeholder="Enter project name" required>
                             </div>
                             <div class="form-group">
                                 <label for="mapWidth">Map Width:</label>
                                 <input type="number" step="1" min="1" max="100" class="form-control" id="mapWidth"
-                                       placeholder="Enter map width">
+                                       placeholder="Enter map width" required>
                             </div>
                             <div class="form-group">
                                 <label for="mapHeight">Map Height:</label>
                                 <input type="number" step="1" min="1" max="100" class="form-control" id="mapHeight"
-                                       placeholder="Enter map height">
+                                       placeholder="Enter map height" required>
                             </div>
                             <div class="form-group">
                                 <label for="tileWidth">Tile Width:</label>
                                 <input type="number" step="1" min="1" max="100" class="form-control" id="tileWidth" value="32"
-                                       placeholder="Enter tile width">
+                                       placeholder="Enter tile width" required>
                             </div>
                             <div class="form-group">
                                 <label for="tileHeight">Tile Height:</label>
                                 <input type="number" step="1" min="1" max="100" class="form-control" id="tileHeight" value="32"
-                                       placeholder="Enter tile height">
+                                       placeholder="Enter tile height" required>
                             </div>
 
                             <div class="modal-footer">
