Able to retrieve projects base on user and display them. And able to reload their projects.

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -26,7 +26,7 @@
 
             <div class="row iconrow">
                 <div class="col">
-                    <a href="/myWork"><i class="fas fa-save icon" title="Save" id="saveWork" ></i></a>
+                    <a ><i class="fas fa-save icon" title="Save" id="saveWork" ></i></a>
                 </div>
             </div>
             <div class = "row iconrow">
