--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -13,15 +13,16 @@
 
 <div th:insert="fragments.html :: nav"></div>
 <!--Create New Poject Button-->
-<div class = "container m-2">
+<div class="container m-2" style="max-width: 100%">
     <div class="row" th:fragment="list" xmlns:th="http://www.thymeleaf.org">
-        <div class = "col-sm-3">
+        <div class="col-sm-3">
             <div class="card mb-3" data-toggle="modal" data-target="#exampleModalCenter">
                 <img src="../images/plus.svg" class="card-img-top addButton" alt="...">
             </div>
         </div>
         <!--The popup model-->
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+             aria-labelledby="exampleModalCenterTitle"
              aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -56,12 +57,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="tileWidth">Tile Width:</label>
-                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileWidth" value="32"
+                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileWidth"
+                                       value="32"
                                        placeholder="Enter tile width" required>
                             </div>
                             <div class="form-group">
                                 <label for="tileHeight">Tile Height:</label>
-                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileHeight" value="32"
+                                <input type="number" step="1" min="1" max="100" class="form-control" id="tileHeight"
+                                       value="32"
                                        placeholder="Enter tile height" required>
                             </div>
 
@@ -75,16 +78,35 @@
                 </div>
             </div>
         </div>
-    <!--<div>-->
-    <!--    <p th:each = "p : ${project}" th:text = "${p.name}" </p>-->
-    <!--</div>-->
-        <div class = "col-sm-3" th:each = "project, stat: ${projects}">
+        <!--<div>-->
+        <!--    <p th:each = "p : ${project}" th:text = "${p.name}" </p>-->
+        <!--</div>-->
+        <div class="col-sm-3" th:each="project, stat: ${projects}" style="padding:2%;"
+             th:onclick="loadContent([[${project.id}]],[[${project.mapJSON}]],[[${project.canvasJSON}]])">
+            <script type="text/javascript">
+                function loadContent(theID, mapJSON, canvasJSON) {
+                    // console.log(typeof project)
+
+                    let id = parseInt(theID)
+                    let theMapJSON = JSON.parse(mapJSON)
+                    theMapJSON.id = id
+                    let theCanvasJSON = JSON.parse(canvasJSON)
+
+                    localStorage.setItem('map', JSON.stringify(theMapJSON));
+                    gridCanvas.loadFromJSON(canvasJSON)
+
+
+                    window.location = "/workspace";
+                }
+            </script>
             <a href="#toworkspacereload">
-                <div class="card mb-3">
+                <div class="card mb-3" style="width: 18rem; margin:auto;">
                     <img class="card-img-top" th:src="${project.screenshot}"/>
-                    <div class="card-footer">
-                        <h6 class="card-title" th:text="${project.name}"/>
-                        <small class="text-muted"  style="padding:unset;" th:text="'Last updated at '+ ${project.createdDate}"/>
+                    <div class="card-footer" style="background: #ebebeb">
+                        <h3 class="card-title" style="overflow: hidden; text-overflow:ellipsis;"
+                            th:text="${project.name}"/>
+                        <small class="text-muted" style="padding:unset;"
+                               th:text="'Last updated at '+ ${project.createdDate}"/>
                     </div>
                 </div>
             </a>
@@ -105,6 +127,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
 
 <!-- Optional JavaScript -->
 <!--<script src="js/addProject.js"></script>-->
