--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -29,21 +29,21 @@
                         <br>
                         <div class="form-group form-inline">
 
-                            <input type="text" class="form-control input-sm chat-input" th:field="*{username}" id="Username" placeholder="Enter username">
+                            <input type="text" class="form-control input-sm chat-input" th:field="*{username}" id="Username" placeholder="Enter username" required>
                             <p class="error-message"
                                th:each="error: ${#fields.errors('username')}"
                                th:text="${error}">Validation error</p>
                         </div>
                         <div class="form-group form-inline">
 
-                            <input type="email" class="form-control input-sm chat-input" th:field="*{email}" id="Email" placeholder="Enter email">
+                            <input type="email" class="form-control input-sm chat-input" th:field="*{email}" id="Email" placeholder="Enter email" required>
                             <p class="error-message"
                                th:each="error: ${#fields.errors('email')}"
                                th:text="${error}">Validation error</p>
                         </div>
                         <div class="form-group form-inline">
 
-                            <input type="password" class="form-control input-sm chat-input" th:field="*{password}" id="password" placeholder="Enter password">
+                            <input type="password" class="form-control input-sm chat-input" th:field="*{password}" id="password" placeholder="Enter password" required>
                             <p class="error-message"
                                th:each="error: ${#fields.errors('password')}"
                                th:text="${error}">Validation error</p>
