push for branch switch

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -91,8 +91,7 @@
             <!--            this is test icons-->
             <div class="row iconrow">
                 <div class="col">
-                    <!--                    <a href="#" id="undoBtn"></a>-->
-                    <i class="fas fa-undo icon" id="undo" title="Undo"></i>
+                    <a href="#" id="undoBtn"><i class="fas fa-undo icon" id="undo" title="Undo"></i></a>
                 </div>
             </div>
             <div class = "row iconrow">
