--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -26,7 +26,7 @@
 
             <div class="row iconrow">
                 <div class="col">
-                    <a ><i class="fas fa-save icon" title="Save" id="saveWork" ></i></a>
+                    <a><i class="fas fa-save icon" title="Save" id="saveWork" ></i></a>
                 </div>
             </div>
             <div class = "row iconrow">
@@ -68,7 +68,7 @@
             </div>
             <div class = "row iconrow">
                 <div class="col">
-                    <i class="fas fa-download icon" title="Download"></i>
+                    <a><i class="fas fa-download icon" title="Download"></i></a>
                 </div>
             </div>
             <!--            this is test icons-->
