--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -26,7 +26,7 @@
 
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-save icon" title="Save" id="saveWork"></i>
+                    <a href = "#"><i class="fas fa-save icon" title="Save" id="saveWork"></i></a>
                 </div>
             </div>
             <div class = "row iconrow">
@@ -196,7 +196,6 @@
                  style="height:900px; width: 100%; position:relative; overflow: auto; background-color: gray;">
                 <div class="canvasGird" id="testGirdy">
                     <canvas id="grid_canvas" class="text-center"></canvas>
-
                 </div>
             </div>
         </div>
@@ -348,16 +347,16 @@
 </script>
 
 <!--<script src = "js/zoom.js"></script>-->
-<script src="js/tabs.js"></script>
+<script src="/js/tabs.js"></script>
 <!--<script src="js/addProject.js"></script>-->
-<script src="js/fabricNumberedImage.js"></script>
-<script src="js/fabricCreateMap.js"></script>
-<script src="js/previewController.js"></script>
-<script type="module" src="js/fabricLayerController.js"></script>
-<script type="module" src="js/layerController.js"></script>
-<script src="js/fabricTilesetController.js"></script>
-<script type="module" src="js/fabricTileStamp.js"></script>
-<script src="js/saveProject.js"></script>
+<script src="/js/fabricNumberedImage.js"></script>
+<script src="/js/fabricCreateMap.js"></script>
+<script src="/js/previewController.js"></script>
+<script type="module" src="/js/fabricLayerController.js"></script>
+<script type="module" src="/js/layerController.js"></script>
+<script src="/js/fabricTilesetController.js"></script>
+<script type="module" src="/js/fabricTileStamp.js"></script>
+<script src="/js/saveProject.js"></script>
 
 <!--<script src="js/tileSelection.js"></script>-->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
