--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -84,7 +84,7 @@
         <!--    <p th:each = "p : ${project}" th:text = "${p.name}" </p>-->
         <!--</div>-->
         <div class="col-sm-3" th:each="project, stat: ${projects}" style="padding:2%;">
-            <div class="card mb-3 projectCard" th:onclick="loadContent([[${project.id}]],[[${project.mapJSON}]],[[${project.canvasJSON}]])">
+            <div class="card mb-3 projectCard" th:onclick="loadContent([[${project.id}]],[[${project.mapJSON}]])">
 
                 <img class="card-img-top" th:src="${project.screenshot}"/>
 
