--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -26,7 +26,7 @@
 
             <div class="row iconrow">
                 <div class="col">
-                    <a><i class="fas fa-save icon" title="Save" id="saveWork" ></i></a>
+                    <a href = "#"><i class="fas fa-save icon" title="Save" id="saveWork" ></i></a>
                 </div>
             </div>
             <div class = "row iconrow">
@@ -91,7 +91,8 @@
             <!--            this is test icons-->
             <div class="row iconrow">
                 <div class="col">
-                    <a href="#" id="undoBtn"><i class="fas fa-undo icon" id="undo" title="Undo"></i></a>
+<!--                    <a href="#" id="undoBtn"></a>-->
+                    <i class="fas fa-undo icon" id="undo" title="Undo"></i>
                 </div>
             </div>
             <div class = "row iconrow">
