--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -84,6 +84,7 @@
         <!--    <p th:each = "p : ${project}" th:text = "${p.name}" </p>-->
         <!--</div>-->
         <div class="col-sm-3" th:each="project, stat: ${projects}" style="padding:2%;">
+            <a th:href="@{'/workspace/'+ ${project.id}}">
             <div class="card mb-3 projectCard" th:onclick="loadContent([[${project.id}]],[[${project.mapJSON}]])">
 
                 <img class="card-img-top" th:src="${project.screenshot}"/>
@@ -105,6 +106,7 @@
                 </div>
                 <a th:href="@{/myWork/delete/{id}(id=${project.id})}" onclick="return confirm('Are you sure?')">Delete</a>
             </div>
+            </a>
 
         </div>
     </div>
